[tool.poetry]
name = "nftprice"
version = "0.1.0"
description = "NFT price prediction"
authors = ["aldmon  <you@example.com>"]
license = "Apache-2.0 license"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
